syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "decimal-value.proto";

option csharp_namespace = "tsx_aggregator.Services";

service StockDataService {
    rpc GetStocksData(GetStocksDataRequest) returns (GetStocksDataReply);
    rpc GetStocksDetail(GetStocksDetailRequest) returns (GetStocksDetailReply);
    rpc GetStockSearchResults(GetStockSearchResultsRequest) returns (GetStockSearchResultsReply);

    rpc GetInstrumentsWithNoRawReports(GetInstrumentsWithNoRawReportsRequest) returns (GetInstrumentsWithNoRawReportsReply);
    rpc SetPriorityCompanies(SetPriorityCompaniesRequest) returns (StockDataServiceReply);
    rpc GetPriorityCompanies(GetPriorityCompaniesRequest) returns (GetPriorityCompaniesReply);
    rpc GetDashboardStats(GetDashboardStatsRequest) returns (GetDashboardStatsReply);
}

message GetStocksDataRequest {
    string exchange = 1;
}

message GetStocksDataReply {
    bool success = 1;
    string error_message = 2;
    repeated GetStocksDataReplyItem stocksData = 3;
}

message GetStocksDetailRequest {
    string exchange = 1;
    string instrument_symbol = 2;
}

message GetStocksDetailReply {
    bool success = 1;
    string error_message = 2;
    GetStocksDataReplyItem stockDetail = 3;
}

message GetStocksDataReplyItem {
    string exchange = 1;
    string company_symbol = 2;
    string instrument_symbol = 3;
    string company_name = 4;
    string instrument_name = 5;
    google.protobuf.Timestamp created_date = 6;
    int64 current_num_shares = 7;
    int64 current_total_shareholders_equity = 8;
    int64 current_goodwill = 9;
    int64 current_intangibles = 10;
    int64 current_long_term_debt = 11;
    int64 current_dividends_paid = 12;
    int64 current_adjusted_retained_earnings = 13;
    int64 oldest_retained_earnings = 14;
    int64 current_book_value = 15;
    int64 average_net_cash_flow = 16;
    int64 average_owner_earnings = 17;
    int32 num_annual_processed_cash_flow_reports = 18;
    DecimalValue per_share_price = 19;
}

message GetStockSearchResultsRequest {
    string search_term = 1;
}

message GetStockSearchResultsReply {
    bool success = 1;
    string error_message = 2;
    repeated GetStockSearchResultsReplyItem searchResults = 3;
}

message GetStockSearchResultsReplyItem {
    string exchange = 1;
    string instrument_symbol = 2;
    string company_name = 3;
}

message StockDataServiceReply {
    bool success = 1;
    string error_message = 2;
}

message GetInstrumentsWithNoRawReportsRequest {
    string exchange = 1;
    int32 page_number = 2;
    int32 page_size = 3;
}

message GetInstrumentsWithNoRawReportsReply {
    bool success = 1;
    string error_message = 2;
    int32 total_items = 3;
    int32 page_number = 4;
    int32 page_size = 5;
    repeated InstrumentInfoItem instruments = 6;
}

message InstrumentInfoItem {
    uint64 instrument_id = 1;
    string exchange = 2;
    string company_symbol = 3;
    string instrument_symbol = 4;
    string company_name = 5;
    string instrument_name = 6;
}

message SetPriorityCompaniesRequest {
    repeated string company_symbols = 1;
}

message GetPriorityCompaniesRequest { }

message GetPriorityCompaniesReply {
    bool success = 1;
    string error_message = 2;
    repeated string company_symbols = 3;
}

message GetDashboardStatsRequest { }

message GetDashboardStatsReply {
    bool success = 1;
    string error_message = 2;
    int64 total_active_instruments = 3;
    int64 total_obsoleted_instruments = 4;
    int64 instruments_with_processed_reports = 5;
    int64 instruments_without_processed_reports = 6;
    google.protobuf.Timestamp most_recent_raw_ingestion = 7;
    google.protobuf.Timestamp most_recent_aggregation = 8;
    int64 unprocessed_event_count = 9;
    reserved 10;
    repeated DashboardRawReportCount raw_report_counts = 11;
    google.protobuf.Timestamp next_fetch_directory_time = 12;
    google.protobuf.Timestamp next_fetch_instrument_data_time = 13;
    google.protobuf.Timestamp next_fetch_quotes_time = 14;
    google.protobuf.Timestamp next_aggregator_cycle_time = 15;
}

message DashboardRawReportCount {
    int32 report_type = 1;
    int64 count = 2;
}
